--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "painel-covid",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-    "styled-components": "^5.2.0"
+  " nome " : " Painel Covid " ,
+  " versão " : " 0.1.0 " ,
+  " privado " : true ,
+  " dependências " : {
+    " @ material-ui / core " : " ^ 4.9.12 " ,
+    " @ material-ui / lab " : " ^ 4.0.0-alpha.51 " ,
+    " @ testing-library / jest-dom " : " ^ 4.2.4 " ,
+    " @ testing-library / react " : " ^ 9.3.2 " ,
+    " @ testing-library / user-event " : " ^ 7.1.2 " ,
+    " Reagir " : " ^ 16.13.1 " ,
+    " react -dom " : " ^ 16.13.1 " ,
+    " react-scripts " : " 3.4.1 " ,
+    " componentes estilizados " : " ^ 5.1.0 "
   },
   "scripts": {
     "start": "react-scripts start",
