--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  " nome " : " Painel Covid " ,
-  " versão " : " 0.1.0 " ,
-  " privado " : true ,
-  " dependências " : {
-    " @ material-ui / core " : " ^ 4.9.12 " ,
-    " @ material-ui / lab " : " ^ 4.0.0-alpha.51 " ,
-    " @ testing-library / jest-dom " : " ^ 4.2.4 " ,
-    " @ testing-library / react " : " ^ 9.3.2 " ,
-    " @ testing-library / user-event " : " ^ 7.1.2 " ,
-    " Reagir " : " ^ 16.13.1 " ,
-    " react -dom " : " ^ 16.13.1 " ,
-    " react-scripts " : " 3.4.1 " ,
-    " componentes estilizados " : " ^ 5.1.0 "
+  "name": "covid19-pwa",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@material-ui/core": "^4.9.11",
+    "@material-ui/lab": "^4.0.0-alpha.50",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "eslint": "eslint --ext .jsx,.js src"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "customize-cra": "^0.9.1",
+    "react-app-rewired": "^2.1.5"
   },
   "browserslist": {
     "production": [
@@ -33,9 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "customize-cra": "^1.0.0",
-    "react-app-rewired": "^2.1.6"
   }
 }
